--- a/app.json
+++ b/app.json
@@ -34,6 +34,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "65b2a717-458b-40cc-9d4e-994888f74374"
+      }
+    },
+    "owner": "ricsdev"
   }
 }
